Source/ConfigParser.output
Grammar

    0 $accept: file "end of file"

    1 file: sections

    2 sections: /* empty */
    3         | sections section

    4 section: section_head values

    5 section_head: "[" "identifier" "]"

    6 values: /* empty */
    7       | values value

    8 value: "identifier" "=" literal_value

    9 literal_value: "boolean contant"
   10              | "integer constant"
   11              | "float constant"
   12              | "string constant"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"identifier" (258) 5 8
"boolean contant" (259) 9
"integer constant" (260) 10
"float constant" (261) 11
"string constant" (262) 12
"[" (263) 5
"]" (264) 5
"=" (265) 8


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
file (12)
    on left: 1, on right: 0
sections (13)
    on left: 2 3, on right: 1 3
section (14)
    on left: 4, on right: 3
section_head (15)
    on left: 5, on right: 4
values (16)
    on left: 6 7, on right: 4 7
value (17)
    on left: 8, on right: 7
literal_value (18)
    on left: 9 10 11 12, on right: 8


state 0

    0 $accept: . file "end of file"

    $default  reduce using rule 2 (sections)

    file      go to state 1
    sections  go to state 2


state 1

    0 $accept: file . "end of file"

    "end of file"  shift, and go to state 3


state 2

    1 file: sections .
    3 sections: sections . section

    "["  shift, and go to state 4

    $default  reduce using rule 1 (file)

    section       go to state 5
    section_head  go to state 6


state 3

    0 $accept: file "end of file" .

    $default  accept


state 4

    5 section_head: "[" . "identifier" "]"

    "identifier"  shift, and go to state 7


state 5

    3 sections: sections section .

    $default  reduce using rule 3 (sections)


state 6

    4 section: section_head . values

    $default  reduce using rule 6 (values)

    values  go to state 8


state 7

    5 section_head: "[" "identifier" . "]"

    "]"  shift, and go to state 9


state 8

    4 section: section_head values .
    7 values: values . value

    "identifier"  shift, and go to state 10

    $default  reduce using rule 4 (section)

    value  go to state 11


state 9

    5 section_head: "[" "identifier" "]" .

    $default  reduce using rule 5 (section_head)


state 10

    8 value: "identifier" . "=" literal_value

    "="  shift, and go to state 12


state 11

    7 values: values value .

    $default  reduce using rule 7 (values)


state 12

    8 value: "identifier" "=" . literal_value

    "boolean contant"   shift, and go to state 13
    "integer constant"  shift, and go to state 14
    "float constant"    shift, and go to state 15
    "string constant"   shift, and go to state 16

    literal_value  go to state 17


state 13

    9 literal_value: "boolean contant" .

    $default  reduce using rule 9 (literal_value)


state 14

   10 literal_value: "integer constant" .

    $default  reduce using rule 10 (literal_value)


state 15

   11 literal_value: "float constant" .

    $default  reduce using rule 11 (literal_value)


state 16

   12 literal_value: "string constant" .

    $default  reduce using rule 12 (literal_value)


state 17

    8 value: "identifier" "=" literal_value .

    $default  reduce using rule 8 (value)
